crates/keron-lang/tests/corpus/errors/check/nullable_map_key.keron
val m: Map<String?, Int> = {}
